refactor: QueryDSL remove